--- a/build.gradle
+++ b/build.gradle
@@ -19,4 +19,9 @@ dependencies {
 
 test {
     useJUnitPlatform()
+    testLogging {
+        events("passed", "skipped", "failed")
+        exceptionFormat "full"
+        showStandardStreams = true
+    }
 }
