--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,7 @@ repositories {
 dependencies {
     implementation 'org.projectlombok:lombok:1.18.28'
     implementation 'org.jetbrains:annotations:24.0.0'
+    implementation group: 'com.github.javafaker', name: 'javafaker', version: '1.0.2'
     implementation group: 'org.apache.commons', name: 'commons-math3', version: '3.6.1'
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
