--- a/src/game/pom.xml
+++ b/src/game/pom.xml
@@ -21,6 +21,12 @@
             <version>1.2.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.github.javafaker</groupId>
+            <artifactId>javafaker</artifactId>
+            <version>1.0.2</version>
+        </dependency>
+
     </dependencies>
 
 </project>
